--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "outdated": "npm outdated"
   },
   "dependencies": {
+    "bookshelf": "^0.10.3",
     "knex": "^0.12.7",
     "koa": "2.0.1",
+    "koa-bodyparser": "^4.1.0",
+    "koa-logger": "^2.0.1",
+    "koa-qs": "^2.0.0",
+    "koa-router": "^7.0.1",
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {
